# iam-principal-enumerator

./: .gitignore  README.md  principal_names.txt  pyproject.toml  pytest.ini
.github/: dependabot.yml
iam_principal_enumerator/: main.py
iam_principal_enumerator/aws/: helpers.py  iam.py  sts.py
iam_principal_enumerator/util/: __init__.py
tests/: test_aws_helpers.py  test_aws_iam.py  test_aws_sts.py  test_main.py  test_util.py
